src/objects/Partner_Commission__c.object
<CustomObject>
    <description>To keep track of client payments andrelated partner details</description>
    <fields>
        <fullName>Annual_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created from Annual Billing</description>
        <label>Annual Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BIData__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BI Data</label>
        <referenceTo>BI_Data__c</referenceTo>
        <relationshipLabel>Partner Commissions</relationshipLabel>
        <relationshipName>Partner_Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Batch_Date__c</fullName>
        <description>Date when the commission was run</description>
        <label>Batch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commission_Amount__c</fullName>
        <label>Commission Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Percent__c</fullName>
        <label>Commission Percent</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Count_of_Records__c</fullName>
        <label>Count of Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Month__c</fullName>
        <formula>IF(MONTH( Payment_Date__c )= MONTH( TODAY()) &amp;&amp; YEAR( Payment_Date__c )= YEAR( TODAY() ) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeInCurrentMonth__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Current Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Client_Revenue__c</fullName>
        <description>Total for the month</description>
        <label>Monthly Client Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Partner Commissions</relationshipLabel>
        <relationshipName>Partner_Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentMonth__c</fullName>
        <formula>MONTH( Payment_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentYear__c</fullName>
        <formula>YEAR( Payment_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <description>Client Payment</description>
        <label>Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Record processed/paid out for Commission.</description>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RVAccount__c</fullName>
        <label>RV Account</label>
        <referenceTo>rvpe__RVAccount__c</referenceTo>
        <relationshipLabel>Partner Commissions</relationshipLabel>
        <relationshipName>Partner_Commissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rollup_Commission__c</fullName>
        <description>Commission from previous month</description>
        <label>Rollup Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Store_Plan__c</fullName>
        <label>Store Plan</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_YearMonth__c</fullName>
        <label>Summary YearMonth</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Partner Commission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>RVAccount__c</columns>
        <columns>Payment__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>IncludeInCurrentMonth__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Summary</fullName>
        <columns>NAME</columns>
        <columns>Monthly_Client_Revenue__c</columns>
        <columns>Rollup_Commission__c</columns>
        <columns>RVAccount__c</columns>
        <columns>Summary_YearMonth__c</columns>
        <columns>Commission_Amount__c</columns>
        <columns>Count_of_Records__c</columns>
        <columns>Batch_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Commission_Percent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Partner_Commission__c.Summary</value>
        </filters>
        <label>Summary</label>
    </listViews>
    <listViews>
        <fullName>future</fullName>
        <columns>NAME</columns>
        <columns>Annual_Billing__c</columns>
        <columns>BIData__c</columns>
        <columns>Opportunity__c</columns>
        <columns>RVAccount__c</columns>
        <columns>PaymentMonth__c</columns>
        <columns>PaymentYear__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PaymentMonth__c</field>
            <operation>greaterThan</operation>
            <value>7</value>
        </filters>
        <filters>
            <field>PaymentYear__c</field>
            <operation>greaterOrEqual</operation>
            <value>2015</value>
        </filters>
        <label>future</label>
    </listViews>
    <nameField>
        <label>Partner Commission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Commissions</pluralLabel>
    <recordTypes>
        <fullName>Detail</fullName>
        <active>true</active>
        <label>Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Summary</fullName>
        <active>true</active>
        <description>Summary per month</description>
        <label>Summary</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>